--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,13 @@
   "extends": ["airbnb", "prettier", "plugin:node/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
@@ -15,5 +21,6 @@
     "class-methods-use-this": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
     "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+
   }
 }
