--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
-USER=santiago
-PASSWORD=123456
+PORT=3000
+DATABASE=mongodb+srv://sahurtaro:<PASSWORD>@cluster0.dvdp0sl.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=Sh42006278
