--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://sahurtaro:<PASSWORD>@cluster0.dvdp0sl.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=Sh42006278
+JWT_SECRET=Shr420062789310220896894377570hr*
+JWT_EXPIRES_IN=90d
