206. Building a complex email handler.

--- a/config.env
+++ b/config.env
@@ -2,10 +2,14 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://sahurtaro:<PASSWORD>@cluster0.dvdp0sl.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=Sh42006278
+
 JWT_SECRET=Shr420062789310220896894377570hr*
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
+
 EMAIL_USERNAME=90dd76738acb9a
 EMAIL_PASSWORD=31bf6a9d5d6766
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
+
+EMAIL_FROM=hello@jonas.io
