--- a/config.env
+++ b/config.env
@@ -13,3 +13,5 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
 
 EMAIL_FROM=hello@jonas.io
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
