206B. Building a complex email handler

--- a/config.env
+++ b/config.env
@@ -9,3 +9,5 @@ EMAIL_USERNAME=90dd76738acb9a
 EMAIL_PASSWORD=31bf6a9d5d6766
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
+
+EMAIL_FROM= sahurtaro@gmail.com
