--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^3.23.3",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
