209B. Using sendgrid for "real" emails

--- a/config.env
+++ b/config.env
@@ -11,3 +11,6 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
 
 EMAIL_FROM= sahurtaro@gmail.com
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
